# try-rs

./: CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE  README.md  release-plz.toml
.github/workflows/: ci.yml  prepare-release.yml  release.yml
src/: action.rs  clock.rs  discover.rs  error.rs  fuzzy.rs  git.rs  lib.rs  main.rs  naming.rs  shell.rs  tui.rs  workspace.rs
src/shell/: emit.rs  init.rs  kind.rs  posix.rs
src/tui/: dialog.rs  input.rs  render.rs  selector.rs  terminal.rs
