[package]
name = "try-rs"
version = "0.1.0"
edition = "2024"
rust-version = "1.91"

[[bin]]
name = "try"
path = "src/main.rs"

[dependencies]
anstream = "0.6"
anyhow = "1"
clap = { version = "4", features = ["derive"] }
crossterm = "0.29"
jiff = "0.2"
thiserror = "2"
unicode-width = "0.2"

[dev-dependencies]
snapbox = "0.6"
tempfile = "3"
